# Raspberry-Pi-player

./: .gitignore  CMakeLists.txt  MediaTypes.py  MetadataExtractor.py  README.md  config_example.json  cookies.txt  main.py  rebuild.sh  requirements.txt  setup.sh  vcpkg.json
data/playlists/: test.json  test1.json
player_site/: manage.py
player_site/player_site/: settings.py  urls.py  wsgi.py
player_site/playlists/: services.py  urls.py  views.py
player_site/templates/: base.html
player_site/templates/playlists/: index.html  playlist_edit.html
res/: main.cpp  pch.h  resources.qrc
res/audio/: PlayerAudio.cpp  PlayerAudio.h  mediafactory.h  mediastategy.h  mp3strategy.h  spotifystrategy.h  youtubestrategy.h
res/music/playlists/: 1.json
res/ui/: MarqueeController.cpp  MarqueeController.h  PlayerScene.cpp  PlayerScene.h  PlayerWindow.cpp  PlayerWindow.h  PlayerWindow.ui  PlaylistScene.cpp  PlaylistScene.h  PlaylistWindow.cpp  PlaylistWindow.h  PlaylistWindow.ui  SpotifyScene.cpp  SpotifyScene.h
res/ui/icons/: resources.qrc
res/utils/: FullscreenMessage.cpp  FullscreenMessage.h  MarqueeController.cpp  ThemeLoader.cpp  ThemeLoader.h  godSays.cpp  godSays.h  timemanager.cpp  timemanager.h  wifichecker.cpp  wifichecker.h  xraycontroller.cpp  xraycontroller.h
